--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
     <h1>Hi this is my project</h1>
-    <h2>My name is Paige</h2>
+    <h2>My name is Paige fkjflkrejtlke4t</h2>
 </body>
 </html>
